<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/guide_resume"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/intro"
        style="@style/Guide.Element"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/guide_resume"
        android:textSize="38sp" />

    <ImageView
        android:id="@+id/logoSpyro"
        style="@style/Guide.Element"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:contentDescription="@string/image"
        app:srcCompat="@drawable/spyro_logo" />

    <TextView
        android:id="@+id/mainText"
        style="@style/Guide.Element"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guide_resume_main_text" />

    <ImageView
        style="@style/Guide.Element"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:contentDescription="@string/image"
        android:src="@drawable/spyro_flying" />

    <ImageView
        android:id="@+id/diamondImage"
        style="@style/Guide.Element"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:clickable="true"
        android:contentDescription="@string/start"
        android:focusable="true"
        android:src="@drawable/start_button" />

</LinearLayout>
